crates/compiler/parser/tests/snapshots/parameterized__expressions::function_call_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { foo(); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "foo",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    args: [],
                                },
                                12..17,
                            ),
                        ),
                        12..18,
                    ),
                ],
            },
            0..20,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { add(a, b, c); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "add",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    args: [
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "a",
                                                    16..17,
                                                ),
                                            ),
                                            16..17,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "b",
                                                    19..20,
                                                ),
                                            ),
                                            19..20,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "c",
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                    ],
                                },
                                12..23,
                            ),
                        ),
                        12..25,
                    ),
                ],
            },
            0..27,
        ),
    ),
]
============================================================

--- Input 3 ---
fn test() { foo(a, b, c,); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "foo",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    args: [
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "a",
                                                    16..17,
                                                ),
                                            ),
                                            16..17,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "b",
                                                    19..20,
                                                ),
                                            ),
                                            19..20,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "c",
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                    ],
                                },
                                12..23,
                            ),
                        ),
                        12..26,
                    ),
                ],
            },
            0..28,
        ),
    ),
]
============================================================

--- Input 4 ---
fn test() { obj.method().another(); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                FunctionCall {
                                                    callee: Spanned(
                                                        MemberAccess {
                                                            object: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "obj",
                                                                        12..15,
                                                                    ),
                                                                ),
                                                                12..15,
                                                            ),
                                                            field: Spanned(
                                                                "method",
                                                                16..22,
                                                            ),
                                                        },
                                                        12..22,
                                                    ),
                                                    args: [],
                                                },
                                                12..24,
                                            ),
                                            field: Spanned(
                                                "another",
                                                25..32,
                                            ),
                                        },
                                        12..32,
                                    ),
                                    args: [],
                                },
                                12..34,
                            ),
                        ),
                        12..35,
                    ),
                ],
            },
            0..37,
        ),
    ),
]
