crates/compiler/parser/tests/snapshots/parameterized__expressions::heap_allocation_new_parameterized_err.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let p = new [10]; }
--- Diagnostics ---
[02] Error: found '[' expected identifier, or '('
   ╭─[ test.cairo:1:25 ]
   │
 1 │ fn test() { let p = new [10]; }
   │                         ┬  
   │                         ╰── found '[' expected identifier, or '('
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { let p = new felt; }
--- Diagnostics ---
[02] Error: found ';' expected '*', or '['
   ╭─[ test.cairo:1:29 ]
   │
 1 │ fn test() { let p = new felt; }
   │                             ┬  
   │                             ╰── found ';' expected '*', or '['
───╯
