crates/compiler/parser/tests/snapshots/parameterized__expressions::heap_allocation_new_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { let p = new felt[10]; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "p",
                                    16..17,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                New {
                                    elem_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                24..28,
                                            ),
                                        ),
                                        24..28,
                                    ),
                                    count: Spanned(
                                        Literal(
                                            10,
                                            None,
                                        ),
                                        29..31,
                                    ),
                                },
                                20..32,
                            ),
                        },
                        12..33,
                    ),
                ],
            },
            0..35,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { let q = new u32[n]; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "q",
                                    16..17,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                New {
                                    elem_type: Spanned(
                                        Named(
                                            Spanned(
                                                U32,
                                                24..27,
                                            ),
                                        ),
                                        24..27,
                                    ),
                                    count: Spanned(
                                        Identifier(
                                            Spanned(
                                                "n",
                                                28..29,
                                            ),
                                        ),
                                        28..29,
                                    ),
                                },
                                20..30,
                            ),
                        },
                        12..31,
                    ),
                ],
            },
            0..33,
        ),
    ),
]
============================================================

--- Input 3 ---
struct Point { x: felt, y: felt }
               fn test() { let r = new Point[2]; }
--- AST ---
[
    Struct(
        Spanned(
            StructDef {
                name: Spanned(
                    "Point",
                    7..12,
                ),
                fields: [
                    (
                        Spanned(
                            "x",
                            15..16,
                        ),
                        Spanned(
                            Named(
                                Spanned(
                                    Felt,
                                    18..22,
                                ),
                            ),
                            18..22,
                        ),
                    ),
                    (
                        Spanned(
                            "y",
                            24..25,
                        ),
                        Spanned(
                            Named(
                                Spanned(
                                    Felt,
                                    27..31,
                                ),
                            ),
                            27..31,
                        ),
                    ),
                ],
            },
            0..33,
        ),
    ),
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    52..56,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "r",
                                    65..66,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                New {
                                    elem_type: Spanned(
                                        Named(
                                            Spanned(
                                                Custom(
                                                    "Point",
                                                ),
                                                73..78,
                                            ),
                                        ),
                                        73..78,
                                    ),
                                    count: Spanned(
                                        Literal(
                                            2,
                                            None,
                                        ),
                                        79..80,
                                    ),
                                },
                                69..81,
                            ),
                        },
                        61..82,
                    ),
                ],
            },
            49..84,
        ),
    ),
]
