crates/compiler/parser/tests/snapshots/parameterized__expressions::identifier_parameterized_err.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { my_var }
--- Diagnostics ---
[02] Error: found '}' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&', '|', '^', '&&', '||', '=', or ';'
   ╭─[ test.cairo:1:20 ]
   │
 1 │ fn test() { my_var }
   │                    ┬  
   │                    ╰── found '}' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&', '|', '^', '&&', '||', '=', or ';'
───╯
