crates/compiler/parser/tests/snapshots/parameterized__expressions::identifier_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { my_var; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Identifier(
                                    Spanned(
                                        "my_var",
                                        12..18,
                                    ),
                                ),
                                12..18,
                            ),
                        ),
                        12..19,
                    ),
                ],
            },
            0..21,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { very_long_variable_name_that_tests_identifier_parsing; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Identifier(
                                    Spanned(
                                        "very_long_variable_name_that_tests_identifier_parsing",
                                        12..65,
                                    ),
                                ),
                                12..65,
                            ),
                        ),
                        12..66,
                    ),
                ],
            },
            0..68,
        ),
    ),
]
