crates/compiler/parser/tests/snapshots/parameterized__expressions::number_literals_parameterized_err.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { 18446744073709551616; }
--- Diagnostics ---
[01] Error: Invalid number '18446744073709551616': Value is higher than u64::max
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 18446744073709551616; }
   │             ──────────┬─────────  
   │                       ╰─────────── Invalid number '18446744073709551616': Value is higher than u64::max
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { 0xGG; }
--- Diagnostics ---
[01] Error: Invalid number '0xGG': Invalid number format
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 0xGG; }
   │             ──┬─  
   │               ╰─── Invalid number '0xGG': Invalid number format
───╯

============================================================

--- Input 3 (ERROR) ---
fn test() { 0x; }
--- Diagnostics ---
[01] Error: Invalid number '0x': Invalid number format
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 0x; }
   │             ─┬  
   │              ╰── Invalid number '0x': Invalid number format
───╯

============================================================

--- Input 4 (ERROR) ---
fn test() { 123abc; }
--- Diagnostics ---
[02] Error: Unknown type suffix 'abc'
   ╭─[ test.cairo:1:13 ]
   │
 1 │ fn test() { 123abc; }
   │             ───┬──  
   │                ╰──── Unknown type suffix 'abc'
───╯

============================================================

--- Input 5 (ERROR) ---
fn test() { 100 }
--- Diagnostics ---
[02] Error: found '}' expected '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', 'as', '&', '|', '^', '&&', '||', '=', or ';'
   ╭─[ test.cairo:1:17 ]
   │
 1 │ fn test() { 100 }
   │                 ┬  
   │                 ╰── found '}' expected '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', 'as', '&', '|', '^', '&&', '||', '=', or ';'
───╯
