crates/compiler/parser/tests/snapshots/parameterized__expressions::number_literals_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { 0; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    0,
                                ),
                                12..13,
                            ),
                        ),
                        12..14,
                    ),
                ],
            },
            0..16,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { 1; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    1,
                                ),
                                12..13,
                            ),
                        ),
                        12..14,
                    ),
                ],
            },
            0..16,
        ),
    ),
]
============================================================

--- Input 3 ---
fn test() { 42; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    42,
                                ),
                                12..14,
                            ),
                        ),
                        12..15,
                    ),
                ],
            },
            0..17,
        ),
    ),
]
============================================================

--- Input 4 ---
fn test() { 1234567890; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    1234567890,
                                ),
                                12..22,
                            ),
                        ),
                        12..23,
                    ),
                ],
            },
            0..25,
        ),
    ),
]
============================================================

--- Input 5 ---
fn test() { 4294967295; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    4294967295,
                                ),
                                12..22,
                            ),
                        ),
                        12..23,
                    ),
                ],
            },
            0..25,
        ),
    ),
]
============================================================

--- Input 6 ---
fn test() { 0x0; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    0,
                                ),
                                12..15,
                            ),
                        ),
                        12..16,
                    ),
                ],
            },
            0..18,
        ),
    ),
]
============================================================

--- Input 7 ---
fn test() { 0xFF; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    255,
                                ),
                                12..16,
                            ),
                        ),
                        12..17,
                    ),
                ],
            },
            0..19,
        ),
    ),
]
============================================================

--- Input 8 ---
fn test() { 0xABCDEF; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    11259375,
                                ),
                                12..20,
                            ),
                        ),
                        12..21,
                    ),
                ],
            },
            0..23,
        ),
    ),
]
